fix z-index of menu

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -4,21 +4,9 @@
   right: 0;
   bottom: 0;
   height: 400px;
-  z-index: 10;
   width: 300px;
 
-  .refresh {
-    padding: 10px;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-    width: 20px;
-    height: 20px;
-    top: 10px;
-    right: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  &_isVisible {
+    z-index: 10;
   }
 }
